--- a/GymSystem.App/GymSystem.App.csproj
+++ b/GymSystem.App/GymSystem.App.csproj
@@ -196,6 +196,9 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls.DataGrid">
       <Version>5.0.0</Version>
     </PackageReference>
+    <PackageReference Include="PDFsharp-MigraDoc">
+      <Version>1.50.4845-RC2a</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GymSystem.Db\GymSystem.Db.csproj">
