--- a/GymSystem.App/GymSystem.App.csproj
+++ b/GymSystem.App/GymSystem.App.csproj
@@ -105,6 +105,7 @@
     <Compile Include="ViewModels\EntranceViewModel.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\SettingsViewModel.cs" />
+    <Compile Include="ViewModels\EntranceTypeViewModel.cs" />
     <Compile Include="Views\AddEntranceToCustomer.xaml.cs">
       <DependentUpon>AddEntranceToCustomer.xaml</DependentUpon>
     </Compile>
