-redesigned customer details page -fixed binding errors -addEntranceLog working ok -Entrance log is visible on customer details page per each enterance -fixed db include errors. -added custom ValueConverter to date format, -fixed IsInEdit property on customer details page and fields are now in editing state only when necessary,

--- a/GymSystem.App/GymSystem.App.csproj
+++ b/GymSystem.App/GymSystem.App.csproj
@@ -117,6 +117,7 @@
       <DependentUpon>ClientList.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\CustomerViewModel.cs" />
+    <Compile Include="Views\DateFormatConverter.cs" />
     <Compile Include="Views\EntranceList.xaml.cs">
       <DependentUpon>EntranceList.xaml</DependentUpon>
     </Compile>
